--- a/assets/css/dokumente.css
+++ b/assets/css/dokumente.css
@@ -62,10 +62,18 @@ span.bfcolor {
   max-width: 100%;
 }
 
+[data-page-type="3"] .page h1 {
+  font-size: 17pt !important;
+}
+
 .page h1 {
   color: #9c0000;
   font-weight: bolder;
   font-size: 22pt;
+}
+
+.av-body p {
+  font-size: 15pt;
 }
 
 .urkunde-body p {
