--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -135,6 +135,50 @@
   z-index: 9999;
 }
 
-[data-bs-theme="dark"] .container.shadow.rounded-3 {
-  background-color: var(--sh-darkgray) !important;
+#topLogo {
+  background-color: var(--sh-gray);
+}
+
+[data-bs-theme="dark"] {
+  #topLogo {
+    background-color: var(--sh-red);
+    border-bottom-color: var(--sh-red-dimmed) !important;
+  }
+
+  svg g#fh > path,
+  svg g#sb > path {
+    fill: var(--white) !important;
+  }
+
+  #mainpageContainer {
+    background-color: var(--bs-tertiary-bg) !important;
+  }
+
+  hr.text-light {
+    color: var(--bs-tertiary-bg) !important;
+  }
+
+  .ma-basedata,
+  .ma-comments,
+  .ma-documents {
+    background-color: var(--bs-secondary-bg) !important;
+    border-color: var(--bs-tertiary-color) !important;
+  }
+
+  .comment p {
+    color: var(--black);
+  }
+
+  .dropzone {
+    background: var(--bs-tertiary-bg) !important;
+    border-color: var(--sh-red);
+  }
+}
+
+/* CSS for the floating button */
+.floating-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
 }
