--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -265,3 +265,86 @@ body#dashboard footer a {
     display: none;
   }
 }
+
+.loader {
+  min-width: 100vw;
+  width: 100%;
+  min-height: 100vh;
+  height: 100%;
+  margin: 0;
+  position: fixed;
+  background-color: #212529;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999999;
+}
+
+.loader .circle {
+  background: linear-gradient(45deg, #337aff, #572ff3, #e81f6c, #f1c726);
+  background-size: 200%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  transform: translateX(-50%) translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  animation: colorfull-spin 2s alternate infinite;
+}
+
+.loader .circle:nth-child(1) {
+  width: 80px;
+  height: 80px;
+  z-index: 1;
+  animation-delay: 0.1s;
+}
+
+.loader .circle:nth-child(2) {
+  width: 60px;
+  height: 60px;
+  z-index: 2;
+  animation-delay: 0.2s;
+}
+
+.loader .circle:nth-child(3) {
+  width: 40px;
+  height: 40px;
+  z-index: 3;
+  animation-delay: 0.3s;
+}
+
+.loader .circle:nth-child(4) {
+  background: linear-gradient(45deg, #337aff, #572ff3, #e81f6c, #f1c726);
+  background-size: 200%;
+  width: 20px;
+  height: 20px;
+  z-index: 4;
+  animation-delay: 0.4s;
+}
+
+@keyframes colorfull-spin {
+  0% {
+    border-radius: 50%;
+    transform: translateX(-50%) translateY(-50%) rotate(0);
+    background-position: 0 50%;
+  }
+  20% {
+    border-radius: 50%;
+    transform: translateX(-50%) translateY(-50%) rotate(0);
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  90% {
+    border-radius: 5%;
+    transform: translateX(-50%) translateY(-50%) rotate(90deg);
+  }
+  100% {
+    border-radius: 5%;
+    transform: translateX(-50%) translateY(-50%) rotate(90deg);
+    background-position: 0 50%;
+  }
+}
