--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -76,35 +76,25 @@
     width: 33%;
   }
 }
-#adminnav-new .nav-link i.fa-solid {
-  color: var(--sh-red);
-}
-
 #adminnav-new .nav-link {
   position: relative;
-  margin: 0 2px;
-}
-#adminnav-new .nav-link::before {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 0;
-  height: 2px;
-  background-color: var(--sh-red);
-  transition: width 0.3s ease-in-out;
-}
-#adminnav-new .nav-link:hover::before {
-  width: 100%;
+  padding: 0.5rem 1rem;
+  border-top: 4px solid transparent;
+  transition: border 0.3s ease-in-out, background-color 0.3s ease-in-out, color 0.3s ease-in-out;
 }
 #adminnav-new .nav-link.active {
   font-weight: bold;
-}
-#adminnav-new .nav-link.active::before {
-  width: 100%;
+  background-color: var(--sh-red);
+  border-top: 4px solid var(--sh-red-dimmed);
+  border-radius: 5px;
 }
 
+@media (min-width: 1400px) {
+  #adminnav-new .navbar-nav {
+    width: 100%;
+    justify-content: space-between;
+  }
+}
 @media (max-width: 1399px) {
   #adminnav-new .navbar-nav {
     flex-wrap: wrap;
@@ -125,8 +115,8 @@
 }
 
 [data-bs-theme=dark] #topLogo {
-  background-color: var(--sh-red);
-  border-bottom-color: var(--sh-red-dimmed) !important;
+  background-color: var(--bs-secondary-bg);
+  border-bottom-color: var(--bs-secondary-color) !important;
 }
 [data-bs-theme=dark] svg g#fh > path,
 [data-bs-theme=dark] svg g#sb > path {
