--- a/assets/css/divi.css
+++ b/assets/css/divi.css
@@ -81,3 +81,18 @@ button#qm-quick-menu {
 button#qm-quick-menu:hover {
   background: var(--sh-blue);
 }
+
+.form-control,
+.form-select {
+  font-family: Inconsolata !important;
+}
+
+.diviRow1,
+.diviRow2 {
+  min-height: 300px;
+}
+
+.fieldDescription {
+  display: flex;
+  align-items: center;
+}
