--- a/assets/css/divi.scss
+++ b/assets/css/divi.scss
@@ -84,3 +84,18 @@ button#qm-quick-menu {
     background: var(--sh-blue);
   }
 }
+
+.form-control,
+.form-select {
+  font-family: Inconsolata !important;
+}
+
+.diviRow1,
+.diviRow2 {
+  min-height: 300px;
+}
+
+.fieldDescription {
+  display: flex;
+  align-items: center;
+}
