--- a/assets/css/dokumente.scss
+++ b/assets/css/dokumente.scss
@@ -109,7 +109,8 @@ span.urkunde-important {
 .dt-6,
 .dt-10,
 .dt-11,
-.dt-12 {
+.dt-12,
+.dt-13 {
   display: none;
 }
 
@@ -142,6 +143,10 @@ body[data-page-type="11"] .dt-11 {
 }
 
 body[data-page-type="12"] .dt-12 {
+  display: block;
+}
+
+body[data-page-type="13"] .dt-13 {
   display: block;
 }
 
