--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -205,15 +205,6 @@ body#dashboard::before {
   z-index: -1;
 }
 
-.glass {
-  background: rgba(0, 0, 0, 0.3);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  border-radius: 15px;
-}
-
 #cards a {
   text-decoration: none;
   color: inherit;
@@ -244,23 +235,108 @@ body#dashboard::before {
   text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
+body#dashboard h1#loginHeader {
+  font-weight: 700;
+  text-align: center;
+}
+
+p.subtext {
+  text-align: center;
+  font-size: 0.9rem;
+  opacity: 0.5;
+  font-weight: 400;
+  margin-top: -10px;
+}
+
 body#dashboard footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  letter-spacing: 0px;
   width: 100%;
-  height: 60px;
-  background: rgba(255, 255, 255, 0.05);
-  border-radius: 0;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(5px);
-  -webkit-backdrop-filter: blur(5px);
-  border-top: 1px solid rgba(255, 255, 255, 0.3);
-  color: var(--white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: fixed;
+  vertical-align: middle;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 42px;
+  background: rgba(0, 0, 0, 0.7);
+  box-shadow: 0px -4px 20px 0px rgba(0, 0, 0, 0.6);
+  image-rendering: -webkit-optimize-contrast;
+  z-index: 999;
+
+  i {
+    font-size: 10px;
+    margin: 2px 4px;
+    width: 16px;
+  }
+
+  .footerCopyright {
+    font-size: 10px;
+    position: absolute;
+    left: 38px;
+
+    span {
+      color: var(--white);
+      opacity: 0.6;
+    }
+
+    a {
+      border-radius: 5px;
+      color: var(--white);
+      margin-left: -3px;
+      padding: 4px 6px 3px 0;
+      text-decoration: none;
+    }
+  }
+
+  .footerNN {
+    font-size: 10px;
+    font-weight: normal;
+    margin-bottom: -1px;
+    padding-top: 1px;
+    margin-left: -16px;
+
+    .nnText:hover {
+      background-color: #187ae9;
+      box-shadow: 0 0 10px 1px rgba(18, 104, 202, 0.5);
+      transition: 0s all;
+    }
+
+    span {
+      padding: 5px 0px;
+    }
+
+    a {
+      padding: 5px 8px;
+      text-decoration: none;
+    }
+
+    svg {
+      vertical-align: middle;
+      image-rendering: -webkit-optimize-contrast;
+      height: 28px;
+      width: auto;
+    }
+  }
+
+  .footerLegal {
+    font-size: 10px;
+    position: absolute;
+    right: 38px;
+
+    a {
+      margin: 0 4px;
+      color: var(--white);
+      margin-left: -3px;
+      padding: 4px 6px 3px 0;
+      text-decoration: none;
+    }
+  }
 
   a {
     color: var(--white);
-    border-bottom: 1px dotted var(--white);
   }
 
   @media screen and (max-width: 1024px) {
