Gewünschte Änderungen umgesetzt

--- a/assets/css/divi.scss
+++ b/assets/css/divi.scss
@@ -85,10 +85,10 @@ button#qm-quick-menu {
   }
 }
 
-.form-control,
-.form-select {
-  font-family: Inconsolata !important;
-}
+// .form-control,
+// .form-select {
+//   font-family: Inconsolata !important;
+// }
 
 .diviRow1,
 .diviRow2 {
