Massive Überarbeitung des kompletten eDIVI

--- a/assets/css/divi.css
+++ b/assets/css/divi.css
@@ -65,8 +65,8 @@ body #qm-quick-menu {
   position: fixed;
   bottom: 30%;
   right: 16px;
-  border-radius: 50%;
-  font-size: 2rem;
+  border-radius: 0;
+  font-size: 1rem;
   padding: 5px 15px;
 }
 
@@ -82,6 +82,27 @@ button#qm-quick-menu:hover {
   background: var(--sh-blue);
 }
 
+body #qm-log-menu {
+  position: fixed;
+  bottom: 30%;
+  right: 16px;
+  border-radius: 0;
+  font-size: 1rem;
+  padding: 5px 15px;
+}
+
+button#qm-log-menu {
+  background: var(--sh-red);
+  color: var(--white);
+  border: none;
+  transform: none;
+  right: 32px;
+  bottom: 84px;
+}
+button#qm-log-menu:hover {
+  background: var(--sh-blue);
+}
+
 .diviRow1,
 .diviRow2 {
   min-height: 300px;
@@ -90,4 +111,196 @@ button#qm-quick-menu:hover {
 .fieldDescription {
   display: flex;
   align-items: center;
+}
+
+#edivi__container,
+body {
+  background-color: #191919 !important;
+  color: #fff;
+}
+
+#edivi__container .edivi__box .form-check-input {
+  --bs-form-check-bg: transparent;
+  --bs-form-check-bg-image: none;
+}
+
+#edivi__container .edivi__box .form-check-input:checked {
+  background-color: #fff;
+  border-color: #fff;
+}
+
+#edivi__container .modal,
+#edivi__container .modal input.form-control {
+  color: #000 !important;
+}
+
+#edivi__container .edivi__box {
+  background: #333333;
+  margin: 10px 0;
+}
+
+#edivi__container .edivi__box .edivi__description {
+  color: #a2a2a2;
+}
+
+#edivi__container .edivi__box input.form-control,
+#edivi__container .edivi__box select.form-select,
+#edivi__container .edivi__box textarea.form-control {
+  background: transparent;
+  border-radius: 0;
+  color: #fff;
+  border: 0;
+  border-bottom: 1px solid #a2a2a2;
+  border-left: 1px solid #a2a2a2;
+  border-right: 1px solid #a2a2a2;
+}
+
+#edivi__container .edivi__box select.form-select {
+  padding: 0.375rem 0rem 0.375rem 0.75rem;
+}
+
+#edivi__container .edivi__box select.form-select option {
+  background-color: #191919;
+  color: #fff;
+  padding: 10px; /* Add padding to options */
+  margin: 0; /* Remove margins */
+}
+
+#edivi__container .edivi__box input.form-control::-moz-placeholder, #edivi__container .edivi__box textarea.form-control::-moz-placeholder {
+  color: #a2a2a2;
+}
+
+#edivi__container .edivi__box input.form-control::placeholder,
+#edivi__container .edivi__box textarea.form-control::placeholder {
+  color: #a2a2a2;
+}
+
+#edivi__container .edivi__box input {
+  transition: border-left 0.3s ease-in-out;
+}
+
+#edivi__container .edivi__box input.edivi__input-check,
+#edivi__container .edivi__box select.edivi__input-check {
+  border-left: 3px solid red;
+}
+
+#edivi__container .edivi__box input.edivi__input-checked,
+#edivi__container .edivi__box select.edivi__input-checked {
+  border-left: 3px solid green;
+}
+
+#edivi__container .edivi__box .edivi__verletzungen-col {
+  position: relative;
+}
+
+#edivi__container .edivi__box .edivi__verletzungen-col::after {
+  content: "";
+  height: 8px;
+  width: 8px;
+  background: transparent;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50%;
+}
+
+#edivi__container .edivi__box .edivi__verletzungen-col.edivi__verletzungen-red::after {
+  background: red;
+}
+
+#edivi__container .edivi__box .edivi__verletzungen-col.edivi__verletzungen-yellow::after {
+  background: yellow;
+}
+
+#edivi__container .edivi__box .edivi__verletzungen-col.edivi__verletzungen-green::after {
+  background: green;
+}
+
+#edivi__container .btn {
+  border-radius: 0 !important;
+}
+
+.edivi__box.edivi__log-comment {
+  background: #333333;
+  color: #a2a2a2;
+  padding: 12px;
+  margin: 0;
+  font-size: 0.8rem;
+}
+.edivi__box.edivi__log-comment i {
+  padding: 6px 9px;
+  border-radius: 2px;
+  background: #a2a2a2;
+  color: #333333;
+  opacity: 0.6;
+}
+
+#edivi__container .edivi__notice {
+  background: #333333;
+  color: #a2a2a2;
+  padding: 12px;
+  margin: 0;
+  font-size: 0.8rem;
+}
+
+#edivi__container .edivi__notice.edivi__notice-freigeber i {
+  padding: 6px 9px;
+  border-radius: 2px;
+  background: #a2a2a2;
+  color: #333333;
+  opacity: 0.6;
+}
+
+#edivi__container .edivi__notice.edivi__notice-qm {
+  background: #fbf9e4;
+  color: rgb(138, 109, 59);
+}
+
+#edivi__container .edivi__notice.edivi__notice-qm i {
+  padding: 6px 6px;
+  border-radius: 2px;
+  background: #faf2cc;
+  color: #8a6d3b;
+}
+
+#edivi__container .edivi__box .edivi__zugang-container {
+  position: relative;
+}
+
+#edivi__container .edivi__box .edivi__zugang-container::after {
+  content: "";
+  height: 8px;
+  width: 8px;
+  background: transparent;
+  position: absolute;
+  right: 20%;
+  top: 50%;
+  transform: translateY(-50%);
+  border-radius: 50%;
+}
+
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt0::after, #edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt9::after {
+  background: yellow;
+}
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt1::after, #edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt8::after {
+  background: blue;
+}
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt2::after {
+  background: pink;
+}
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt3::after {
+  background: green;
+}
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt4::after {
+  background: white;
+}
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt5::after {
+  background: gray;
+}
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt6::after {
+  background: orange;
+}
+#edivi__container .edivi__box .edivi__zugang-container.edivi__zugang-opt7::after {
+  background: red;
 }
